--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Mentor and leader, inspiring growth in tech communities.
     <main>
         <section class="container about" id="about">
             <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text"></span></h2>
+                <h2> <span></span><span class="bg-text">About Me</span></h2>
             </div>
             <div class="about-container">
                 <div class="left-about">
