--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Mentor and leader, inspiring growth in tech communities.
     <main>
         <section class="container about" id="about">
             <div class="main-title">
-                <h2> <span></span><span class="bg-text">About Me</span></h2>
+                <h2> About <span>Me</span><span class="bg-text"></span></h2>
             </div>
             <div class="about-container">
                 <div class="left-about">
@@ -181,7 +181,7 @@ Mentor and leader, inspiring growth in tech communities.
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2> <span></span><span class="bg-text">My Work</span></h2>
+                <h2> My<span> Work</span><span class="bg-text"></span></h2>
             </div>
             <p class="port-text">
                 Here is some of my work that I've done in various programming languages.
@@ -269,7 +269,7 @@ Mentor and leader, inspiring growth in tech communities.
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
-                    <h2><span></span><span class="bg-text">Contact Me</span></h2>
+                    <h2>Contact <span>Me</span><span class="bg-text"></span></h2>
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
