--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="./img/pic.jpg" alt="">
+                    <img src="pic.jpg" alt="">
                 </div>
             </div>
             <div class="right-header">
