--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Mentor and leader, inspiring growth in tech communities.
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">1+</p>
+                            <p class="large-text">1</p>
                             <p class="small-text">Internships <br /> Done</p>
                         </div>
                     </div>
