--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ Mentor and leader, inspiring growth in tech communities.
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">1</p>
-                            <p class="small-text">Internships <br /> Done</p>
+                            <p class="small-text">1 Internship <br /> Done</p>
                         </div>
                     </div>
                 </div>
