--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@ Mentor and leader, inspiring growth in tech communities.
                         </div>
                     </div>
                     <div class="about-item">
-                        <div class="abt-text">
-                            <p class="small-text">1 Internship <br /> Done</p>
+                        <div class="abt-text">\
+                            <p class="large-text">1</p>
+                            <p class="small-text">Internship <br /> Done</p>
                         </div>
                     </div>
                 </div>
