--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Mentor and leader, inspiring growth in tech communities.
                         </div>
                     </div>
                     <div class="about-item">
-                        <div class="abt-text">\
+                        <div class="abt-text">
                             <p class="large-text">1</p>
                             <p class="small-text">Internship <br /> Done</p>
                         </div>
